// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Charts /> should render properly for "Facet" 1`] = `
<div>
  <ResponsiveGridLayout
    breakpoints={
      Object {
        "0": 100,
        "1": 200,
        "10": 1100,
        "11": 1200,
        "12": 1300,
        "13": 1400,
        "14": 1500,
        "15": 1600,
        "16": 1700,
        "17": 1800,
        "18": 1900,
        "19": 2000,
        "2": 300,
        "20": 2100,
        "21": 2200,
        "22": 2300,
        "23": 2400,
        "24": 2500,
        "25": 2600,
        "26": 2700,
        "27": 2800,
        "28": 2900,
        "29": 3000,
        "3": 400,
        "30": 3100,
        "31": 3200,
        "32": 3300,
        "33": 3400,
        "34": 3500,
        "35": 3600,
        "36": 3700,
        "37": 3800,
        "38": 3900,
        "39": 4000,
        "4": 500,
        "40": 4100,
        "5": 600,
        "6": 700,
        "7": 800,
        "8": 900,
        "9": 1000,
      }
    }
    cols={
      Object {
        "0": 1,
        "1": 2,
        "10": 11,
        "11": 12,
        "12": 13,
        "13": 14,
        "14": 15,
        "15": 16,
        "16": 17,
        "17": 18,
        "18": 19,
        "19": 20,
        "2": 3,
        "20": 21,
        "21": 22,
        "22": 23,
        "23": 24,
        "24": 25,
        "25": 26,
        "26": 27,
        "27": 28,
        "28": 29,
        "29": 30,
        "3": 4,
        "30": 31,
        "31": 32,
        "32": 33,
        "33": 34,
        "34": 35,
        "35": 36,
        "36": 37,
        "37": 38,
        "38": 39,
        "39": 40,
        "4": 5,
        "40": 41,
        "5": 6,
        "6": 7,
        "7": 8,
        "8": 9,
        "9": 10,
      }
    }
    containerPadding={
      Array [
        0,
        0,
      ]
    }
    layouts={Object {}}
    margin={
      Array [
        16,
        16,
      ]
    }
    onLayoutChange={[Function]}
    rowHeight={50}
    width={1200}
  >
    <div>
      <ChartFacet
        chart={
          Object {
            "id": "972a8ab5-cdcb-4eea-ada7-f1c88d997fed",
            "type": "facet",
          }
        }
        chartIndex={0}
        dispatch={[Function]}
      />
    </div>
  </ResponsiveGridLayout>
</div>
`;

exports[`<Charts /> should render properly for "Histogram" 1`] = `
<div>
  <ResponsiveGridLayout
    breakpoints={
      Object {
        "0": 100,
        "1": 200,
        "10": 1100,
        "11": 1200,
        "12": 1300,
        "13": 1400,
        "14": 1500,
        "15": 1600,
        "16": 1700,
        "17": 1800,
        "18": 1900,
        "19": 2000,
        "2": 300,
        "20": 2100,
        "21": 2200,
        "22": 2300,
        "23": 2400,
        "24": 2500,
        "25": 2600,
        "26": 2700,
        "27": 2800,
        "28": 2900,
        "29": 3000,
        "3": 400,
        "30": 3100,
        "31": 3200,
        "32": 3300,
        "33": 3400,
        "34": 3500,
        "35": 3600,
        "36": 3700,
        "37": 3800,
        "38": 3900,
        "39": 4000,
        "4": 500,
        "40": 4100,
        "5": 600,
        "6": 700,
        "7": 800,
        "8": 900,
        "9": 1000,
      }
    }
    cols={
      Object {
        "0": 1,
        "1": 2,
        "10": 11,
        "11": 12,
        "12": 13,
        "13": 14,
        "14": 15,
        "15": 16,
        "16": 17,
        "17": 18,
        "18": 19,
        "19": 20,
        "2": 3,
        "20": 21,
        "21": 22,
        "22": 23,
        "23": 24,
        "24": 25,
        "25": 26,
        "26": 27,
        "27": 28,
        "28": 29,
        "29": 30,
        "3": 4,
        "30": 31,
        "31": 32,
        "32": 33,
        "33": 34,
        "34": 35,
        "35": 36,
        "36": 37,
        "37": 38,
        "38": 39,
        "39": 40,
        "4": 5,
        "40": 41,
        "5": 6,
        "6": 7,
        "7": 8,
        "8": 9,
        "9": 10,
      }
    }
    containerPadding={
      Array [
        0,
        0,
      ]
    }
    layouts={Object {}}
    margin={
      Array [
        16,
        16,
      ]
    }
    onLayoutChange={[Function]}
    rowHeight={50}
    width={1200}
  >
    <div>
      Histogram
    </div>
  </ResponsiveGridLayout>
</div>
`;

exports[`<Charts /> should render properly for "Range" 1`] = `
<div>
  <ResponsiveGridLayout
    breakpoints={
      Object {
        "0": 100,
        "1": 200,
        "10": 1100,
        "11": 1200,
        "12": 1300,
        "13": 1400,
        "14": 1500,
        "15": 1600,
        "16": 1700,
        "17": 1800,
        "18": 1900,
        "19": 2000,
        "2": 300,
        "20": 2100,
        "21": 2200,
        "22": 2300,
        "23": 2400,
        "24": 2500,
        "25": 2600,
        "26": 2700,
        "27": 2800,
        "28": 2900,
        "29": 3000,
        "3": 400,
        "30": 3100,
        "31": 3200,
        "32": 3300,
        "33": 3400,
        "34": 3500,
        "35": 3600,
        "36": 3700,
        "37": 3800,
        "38": 3900,
        "39": 4000,
        "4": 500,
        "40": 4100,
        "5": 600,
        "6": 700,
        "7": 800,
        "8": 900,
        "9": 1000,
      }
    }
    cols={
      Object {
        "0": 1,
        "1": 2,
        "10": 11,
        "11": 12,
        "12": 13,
        "13": 14,
        "14": 15,
        "15": 16,
        "16": 17,
        "17": 18,
        "18": 19,
        "19": 20,
        "2": 3,
        "20": 21,
        "21": 22,
        "22": 23,
        "23": 24,
        "24": 25,
        "25": 26,
        "26": 27,
        "27": 28,
        "28": 29,
        "29": 30,
        "3": 4,
        "30": 31,
        "31": 32,
        "32": 33,
        "33": 34,
        "34": 35,
        "35": 36,
        "36": 37,
        "37": 38,
        "38": 39,
        "39": 40,
        "4": 5,
        "40": 41,
        "5": 6,
        "6": 7,
        "7": 8,
        "8": 9,
        "9": 10,
      }
    }
    containerPadding={
      Array [
        0,
        0,
      ]
    }
    layouts={Object {}}
    margin={
      Array [
        16,
        16,
      ]
    }
    onLayoutChange={[Function]}
    rowHeight={50}
    width={1200}
  >
    <div>
      <ChartRange
        chart={
          Object {
            "id": "972a8ab5-cdcb-4eea-ada7-f1c88d997fed",
            "type": "range",
          }
        }
        chartIndex={0}
        dispatch={[Function]}
      />
    </div>
  </ResponsiveGridLayout>
</div>
`;

exports[`<Charts /> should render properly for "Unknown" 1`] = `
<div>
  <ResponsiveGridLayout
    breakpoints={
      Object {
        "0": 100,
        "1": 200,
        "10": 1100,
        "11": 1200,
        "12": 1300,
        "13": 1400,
        "14": 1500,
        "15": 1600,
        "16": 1700,
        "17": 1800,
        "18": 1900,
        "19": 2000,
        "2": 300,
        "20": 2100,
        "21": 2200,
        "22": 2300,
        "23": 2400,
        "24": 2500,
        "25": 2600,
        "26": 2700,
        "27": 2800,
        "28": 2900,
        "29": 3000,
        "3": 400,
        "30": 3100,
        "31": 3200,
        "32": 3300,
        "33": 3400,
        "34": 3500,
        "35": 3600,
        "36": 3700,
        "37": 3800,
        "38": 3900,
        "39": 4000,
        "4": 500,
        "40": 4100,
        "5": 600,
        "6": 700,
        "7": 800,
        "8": 900,
        "9": 1000,
      }
    }
    cols={
      Object {
        "0": 1,
        "1": 2,
        "10": 11,
        "11": 12,
        "12": 13,
        "13": 14,
        "14": 15,
        "15": 16,
        "16": 17,
        "17": 18,
        "18": 19,
        "19": 20,
        "2": 3,
        "20": 21,
        "21": 22,
        "22": 23,
        "23": 24,
        "24": 25,
        "25": 26,
        "26": 27,
        "27": 28,
        "28": 29,
        "29": 30,
        "3": 4,
        "30": 31,
        "31": 32,
        "32": 33,
        "33": 34,
        "34": 35,
        "35": 36,
        "36": 37,
        "37": 38,
        "38": 39,
        "39": 40,
        "4": 5,
        "40": 41,
        "5": 6,
        "6": 7,
        "7": 8,
        "8": 9,
        "9": 10,
      }
    }
    containerPadding={
      Array [
        0,
        0,
      ]
    }
    layouts={Object {}}
    margin={
      Array [
        16,
        16,
      ]
    }
    onLayoutChange={[Function]}
    rowHeight={50}
    width={1200}
  />
</div>
`;
